project reformatting